# sk_fastllm

./: CMakeLists.txt
.github/workflows/: Build.yml  pr-review.yml
include/devices/cuda/: activation_kernels.cuh  fastllm-cuda.cuh
src/devices/: type_convert.cuh
src/devices/cuda/: activation_kernels.cu  activation_kernels.cuh  batch_invariant.hpp  cub_helpers.h  cudadevice.cpp  fastllm-cuda-vllm-compat.cu  fastllm-cuda-vllm-ops.cu  fastllm-cuda-vllm-runtime.cu  fastllm-cuda.cu  fastllm-vllm-cuda-common.cu  fastllm-vllm-cuda-common.cuh  fastllm-vllm-cuda.cu  kernel_macros.cuh  layernorm_kernels.cu  layernorm_kernels.cuh
src/devices/cuda/awq/: fastllm-awq-vllm-kernel.cuh  fastllm-awq-vllm.cu
src/devices/cuda/linear/: fastllm-linear-int4group.cu
src/devices/cuda/quantization/w8a8/fp8/: common.cu  common.cuh
src/devices/cuda/quantization/w8a8/int8/: scaled_quant.cu
src/libtorch_stable/quantization/: vectorization.cuh  vectorization_utils.cuh
src/libtorch_stable/quantization/awq/: dequantize.cuh  gemm_kernels.cu
test/cuda/: CMakeLists.txt  README.md  test_awq_gemm_compare.cu  test_fastllm_data_stub.cpp  test_utils.cpp  test_utils.h
